Correct overflow error for mobile display

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,10 @@ h1.heading{
     color: var(--accent-color);
 }
 
-
-
-/* #carousel{
-    height: 100vh;
+main {
+    overflow-x: hidden;
+}
+/* *{
+    overflow-x: hidden;
 } */
 
